# RoDeO

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile_DEBUG  Makefile_TEST  README.md  Rodeo.cpp  Rodeo_macros.hpp  auxilliary_functions.cpp  auxilliary_functions.hpp  binary_search_tree.cpp  bitmap_image.hpp  bitmap_test.cpp  interpolation.cpp  interpolation.hpp  kd_tree.cpp  kd_tree.hpp  kmeans_clustering.cpp  kmeans_clustering.hpp  kriging_training.cpp  kriging_training.hpp  lhs.py  linear_regression.cpp  linear_regression.hpp  mnist.cpp  plot_1d_function.py  plot_1d_function_linreg.py  plot_2d_surface.py  rbf.cpp  rbf.hpp  solve_qp_for_svm.py  su2_optim.cpp  su2_optim.hpp  svm.cpp  svm.hpp  test_functions.cpp  test_functions.hpp  trust_region_gek.cpp  (+1 more)
externalFunctions/: CMakeLists.txt  constraintFunction0.cpp  constraintFunction1.cpp  constraintFunction2.cpp  constraintFunction3.cpp  externalFunctions.cpp
externalFunctions/INCLUDE/: externalFunctions.hpp
src/: CMakeLists.txt  Makefile  Regularization Weights.txt  Rodeo.cpp  Rodeo_globals.hpp  Rodeo_macros.hpp  Wingweight_0_200.csv  aggregation_model.cpp  aggregation_model.hpp  aggregation_test.cpp  aggregation_test.hpp  ann.cpp  ann.hpp  auxiliary_functions.cpp  auxiliary_functions.hpp  auxiliary_functions_test.cpp  auxilliary_functions.cpp  auxilliary_functions.hpp  binary_search_tree.cpp  binary_search_tree.hpp  bounds.cpp  configkey.cpp  constraint_functions.cpp  constraint_functions.hpp  constraint_functions_test.cpp  correlation_functions.cpp  design.cpp  design.hpp  design_test.cpp  drivers.cpp  drivers.hpp  ea_optimizer.cpp  gek.cpp  gek_test.cpp  gek_test.hpp  general_purpose_optimizer.cpp  ggek.cpp  gradient_kernel_regression.cpp  gradient_kernel_regression.hpp  gradient_optimizer.cpp  (+63 more)
src/API/: CMakeLists.txt  cppAPI.cpp  rodeo.cpp  rodeo.h  rodeo_api.cpp
src/API/INCLUDE/: rodeo.h  rodeoapi.h
src/API/UnitTests/: testAPI  testAPI.cpp
src/Auxiliary/: CMakeLists.txt  auxiliary_functions.cpp  print.cpp  string_functions.cpp  xml_functions.cpp
src/Auxiliary/INCLUDE/: auxiliary_functions.hpp  print.hpp  xml_functions.hpp
src/Auxiliary/UnitTests/: CMakeLists.txt  auxiliary_functions_test.cpp  string_functions_test.cpp  xml_functions_test.cpp
src/Bounds/: CMakeLists.txt  bounds.cpp
src/Bounds/INCLUDE/: bounds.hpp
src/Bounds/UnitTests/: CMakeLists.txt  bounds_test.cpp
src/CorrelationFunctions/: CMakeLists.txt  correlation_functions.cpp  exponential_correlation_function.cpp  gaussian_correlation_function.cpp
src/CorrelationFunctions/INCLUDE/: correlation_functions.hpp  exponential_correlation_function.hpp  gaussian_correlation_function.hpp
src/CorrelationFunctions/UnitTests/: CMakeLists.txt  correlation_functions_test.cpp  exponential_correlation_function_test.cpp
src/Design/: CMakeLists.txt  design.cpp  design_bo.cpp
src/Design/INCLUDE/: design.hpp
src/Driver/: CMakeLists.txt  configkey.cpp  driver_xml.cpp  drivers.cpp  string_functions.cpp  xml_functions.cpp
src/Driver/INCLUDE/: configkey.hpp  driver_logger.hpp  driver_xml.hpp  drivers.hpp  string_functions.hpp  xml_functions.hpp
src/Driver/UnitTests/: CMakeLists.txt  (+3 more)
src/GUI/: boxConstraints.py  constraintFunction.py  constraint_functions_frame.py  file_entry_field.py  file_select_button.py  font_and_color_settings.py  gui_settings.py  integer_entry_field.py  main.py  menu.py  objectiveFunction.py  objective_function_frame.py  parameters.py  parametersFrame.py  problem_settings.py  rodopt.py  singleConstraintFrame.py  surrogate_model_entry_field.py  testConstrainFunction.py
src/INCLUDE/: Rodeo_globals.hpp  Rodeo_macros.hpp  aggregation_model.hpp  auxiliary_functions.hpp  bounds.hpp  configkey.hpp  constraint_functions.hpp  correlation_functions.hpp  design.hpp  drivers.hpp  ea_optimizer.hpp  exponential_correlation_function.hpp  gaussian_correlation_function.hpp  gek.hpp  general_purpose_optimizer.hpp  ggek.hpp  globals.hpp  gradient_optimizer.hpp  kriging_training.hpp  lhs.hpp  linear_regression.hpp  linear_solver.hpp  macros.hpp  matrix_vector_operations.hpp  metric.hpp  multi_level_method.hpp  objective_function.hpp  optimization.hpp  output.hpp  random_functions.hpp  read_settings.hpp  sgek.hpp  standard_test_functions.hpp  surrogate_model.hpp  surrogate_model_data.hpp  surrogate_model_tester.hpp  test_defines.hpp  test_functions.hpp  tgek.hpp
src/InternalOptimizers/: CMakeLists.txt  ea_individual.cpp  ea_optimizer.cpp  ea_population.cpp  general_purpose_optimizer.cpp  gradient_optimizer.cpp
src/LHS/: CMakeLists.txt  lhs.cpp
src/LinearAlgebra/: CMakeLists.txt  bounds.cpp  linear_solver.cpp  matrix.cpp  matrix_operations.cpp  matrix_vector_operations.cpp  vector.cpp  vector_manipulations.cpp  vector_operations.cpp
src/Metric/: CMakeLists.txt  metric.cpp
src/ObjectiveFunctions/: CMakeLists.txt  constraint_functions.cpp  objective_function.cpp
src/Optimizers/: CMakeLists.txt  aux.cpp  constraint_functions.cpp  design.cpp  ea_optimizer.cpp  efficient_global_optimization.cpp  eggholder.cpp  general_purpose_optimizer.cpp  ggek.cpp  globalOptimalDesign.cpp  gradient_optimizer.cpp  kriging_training.cpp  linear_regression.cpp  metric.cpp  multi_level_model.cpp  objective_function.cpp  optimization.cpp  optimization_constraint_functions.cpp  optimization_history.cpp  optimization_setter_getters.cpp  optimization_settings.cpp  standard_test_functions.cpp  surrogate_model.cpp  surrogate_model_data.cpp  surrogate_model_tester.cpp  test_functions.cpp
src/Output/: CMakeLists.txt  output.cpp
src/Random/: CMakeLists.txt  random_functions.cpp
src/SurrogateModels/: CMakeLists.txt  aggregation_model.cpp  ggek.cpp  kriging_training.cpp  linear_regression.cpp  multi_level_model.cpp  surrogate_model.cpp  surrogate_model_data.cpp  surrogate_model_tester.cpp  tgek.cpp
src/TestFunctions/: CMakeLists.txt  griewank2D.cpp  himmelblau.cpp  standard_test_functions.cpp  test_functions.cpp  wingweight.cpp
src/include/: constraint_functions.hpp  drivers.hpp  lhs.hpp  linear_regression.hpp  matrix_vector_operations.hpp
(+524 files in other folders)
