if(UNIT_TESTS)
	set(src_files auxiliary_functions_test.cpp string_functions_test.cpp xml_functions_test.cpp)
	add_executable(runTestsAuxiliary runTests.cpp ${src_files})
	find_package(Armadillo REQUIRED)
	include_directories(${ARMADILLO_INCLUDE_DIRS})
	target_link_libraries(runTestsAuxiliary gtest_main)
	target_link_libraries(runTestsAuxiliary ${ARMADILLO_LIBRARIES})
#	target_link_libraries(runTestsAuxiliary   linearAlgebra)
	target_link_libraries(runTestsAuxiliary   auxiliary)

endif(UNIT_TESTS)
